--- a/res/layout/categories_main.xml
+++ b/res/layout/categories_main.xml
@@ -11,7 +11,10 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/second_screen" />
+        android:text="@string/second_screen"
+        android:textColor="#0099cc"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listViewCat"
